[package]
name = "nymbazaar-client"
version = "0.1.0"
edition = "2021"

[dependencies]
nym-sdk = { git = "https://github.com/nymtech/nym", branch = "develop" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
uuid = { version = "1.3", features = ["v4"] }
